crates/plotnik-lib/tests/03-analyze/empty_constructs/nested_empty_sequence.txt
Q = (foo {})
==== diagnostics ====
error: empty `{}` matches nothing
 --> query.ptk:1:10
  |
1 | Q = (foo {})
  |          ^^
  |
help: sequences must contain at least one expression
==== symbols ====
Q
